kubernetes/helm/security/kyverno/manifests/ingress-apply-common-annotations.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-apply-common-annotations
  annotations:
    policies.kyverno.io/title: Apply Common Ingress Annotations
    policies.kyverno.io/subject: Ingress
spec:
  rules:
    - name: apply-common-nginx-annotations
      match:
        any:
          - resources:
              kinds: ["Ingress"]
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(cert-manager.io/cluster-issuer): "prod-issuer"
              +(kubernetes.io/ingress-allow-http): "false"
              +(nginx.ingress.kubernetes.io/proxy-read-timeout): "36000"
              +(nginx.ingress.kubernetes.io/proxy-send-timeout): "36000"
