kubernetes/helm/security/kyverno/manifests/ingress-apply-internal-annotations.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-apply-internal-annotations
  annotations:
    policies.kyverno.io/title: Apply Ingress Whitelist Annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates annotations on ingresses. When
      the `external-dns.home.arpa/enabled` annotation is not
      set it applies the nginx annotations for use with only
      internal application access.
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
  - name: apply-common-nginx-annotations
    match:
      any:
      - resources:
          kinds:
          - Ingress
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            cert-manager.io/cluster-issuer: "prod-issuer"
